Added sample html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-this is the new home page for the project.
+<!DOCTYPE html>
+<html>
+<head>
+  <title>IT Management and the Second Law of Thermodynamics<title>
+</head>
+<body>
+  <h1>First header</h1>
+  <footer>Footer goes here</footer>
+</body>
+</html>
