--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>IT Management and the Second Law of Thermodynamics<title>
 </head>
 <body>
   <h1>First header</h1>
-  <footer>Footer goes here</footer>
+  First thought.
+  <footer>
+    <p>
+      Thoughts by <a href=https://www.linkedin.com/in/antonni>Anton Nikitin</a>.
+    </p>
+  </footer>
 </body>
 </html>
