--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
 </head>
 <body>
-  <h1>First header</h1>
-  First thought.
+  <h1>Purpose</h1>
+  This repo holds my thoughts about IT management. Technology, Processes, People.
+  <h1>People</h1>
+  When I started managing a team, I was determined to be demostrably successful. It required a framework to measure and manage such success with people.
+  I looked through a lot of books to find such a framework, until I found one that was exactly what the doctor ordered. It is based on research, easy to implement, shows causation, and actionable to a team manager.
+  <p> The book is "First Break All the Rules" (the title is weird. It is about one of the ideas that "the Golden Rule" is not perfect. Everyone needs to be treated like they want to be treated, not like you want to be treated).
   <footer>
     <p>
+      <hr>
       Thoughts by <a href=https://www.linkedin.com/in/antonni>Anton Nikitin</a>.
     </p>
   </footer>
