--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 </head>
 <body>
+  <h1>IT Management and the Second Law of Thermodynamics</h1>
+  <br>
   <h1>Purpose</h1>
-  This repo holds my thoughts about IT management. Technology, Processes, People.
+  This repo holds my thoughts about IT management. Technology, Processes, and People.
   <h1>People</h1>
   When I started managing a team, I was determined to be demostrably successful. It required a framework to measure and manage such success with people.
   I looked through a lot of books to find such a framework, until I found one that was exactly what the doctor ordered. It is based on research, easy to implement, shows causation, and actionable to a team manager.
